[package]
name = "kornia-rs"
version = "0.1.2"
edition = "2021"
description = "Low-level computer vision library in Rust"
homepage = "http://kornia.org"
repository = "https://github.com/kornia/kornia-rs"
categories = ["image-processing", "computer-vision", "machine-learning"]
license-file = "LICENSE"

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.3", features = ["derive"] }
num-traits = "0.2.17"
image = { version = "0.25.0" }
indicatif = { version = "0.17.8", features = ["rayon"] }
turbojpeg = {version = "1.0.0"}
memmap2 = "0.9.4"
ndarray = { version = "0.15.6", features = ["rayon"] }
rayon = "1.9.0"
walkdir = "2.5.0"
fast_image_resize = "3.0.4"
# this is experimental and only used for benchmarking, so it's optional
# consider removing it in the future.
candle-core = { version = "0.3.2", optional = true }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rerun = "0.14.1"
tempfile = "3.9.0"

[features]
candle = ["candle-core"]

[[bench]]
name = "bench_color"
harness = false

[[bench]]
name = "bench_resize"
harness = false

[[bench]]
name = "bench_metrics"
harness = false

[[bench]]
name = "bench_io"
harness = false
